// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshot: primary with icon on left 1`] = `
<button
  className="c-dbQCMR c-dbQCMR-gSdUEK-variant-primary"
  data-testid="button"
  role="button"
  tabIndex={0}
>
  <span
    className="c-PJLV c-PJLV-ijxSBfJ-css"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 6 10"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 9L5 5L1 1"
        stroke="white"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="1.5"
      />
    </svg>
  </span>
  Primary Button
</button>
`;

exports[`Button matches snapshot: secondary with icon on right 1`] = `
<button
  className="c-dbQCMR c-dbQCMR-fpBJKz-variant-secondary"
  data-testid="button"
  role="button"
  tabIndex={0}
>
  Secondary Button
  <span
    className="c-PJLV c-PJLV-ieSlpoK-css"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 6 10"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 9L5 5L1 1"
        stroke="white"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="1.5"
      />
    </svg>
  </span>
</button>
`;

exports[`Button matches snapshot: text - disabled and loading 1`] = `
<button
  className="c-dbQCMR c-dbQCMR-hFiUAt-variant-text c-dbQCMR-hWMCax-loading-true"
  data-testid="button"
  disabled={true}
  role="button"
  tabIndex={0}
>
  Text only Button
</button>
`;

exports[`Button matches snapshot: text and custom styles 1`] = `
<button
  className="c-dbQCMR c-dbQCMR-hFiUAt-variant-text c-dbQCMR-ihBcVkj-css"
  data-testid="button"
  role="button"
  tabIndex={0}
>
  Link text
</button>
`;

exports[`Button matches snapshot: text with icon on both sides 1`] = `
<button
  className="c-dbQCMR c-dbQCMR-hFiUAt-variant-text"
  data-testid="button"
  role="button"
  tabIndex={0}
>
  <span
    className="c-PJLV c-PJLV-ijxSBfJ-css"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 6 10"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 9L5 5L1 1"
        stroke="white"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="1.5"
      />
    </svg>
  </span>
  Text Button
  <span
    className="c-PJLV c-PJLV-ieSlpoK-css"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 6 10"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 9L5 5L1 1"
        stroke="white"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="1.5"
      />
    </svg>
  </span>
</button>
`;
